# schoolsoft

./: .gitignore  CHANGELOG.txt  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-3-link
examples/: next_lesson.rs
hurl/: get_token.sh  login.hurl  lunch.hurl  schedule.hurl  school-list.hurl  secrets.template  yeet.sh
hurl/output/: lunch.json  schedule.json  school-list.json
hurl/responses/: student.json
reversing/: README.md
reversing/web/: README.md  login.hurl  schools.hurl  session.hurl  student.hurl
reversing/web/responses/: schools.json  session.json
src/: errors.rs  lib.rs  schedule.rs  school.rs  types.rs  user.rs  utils.rs
src/deserializers/: lunch.rs  mod.rs  school.rs  user.rs
src/serializers/: mod.rs
tests/: login.rs  lunch.rs  mock.rs  schedule.rs  schoollist.rs  token.rs
tests/login/: main.rs
tests/lunch/: main.rs
tests/mock/: mod.rs
tests/schoollist/: main.rs
tests/token/: main.rs
