[package]
name = "schoolsoft"
version = "1.0.0-alpha.1"
edition = "2021"
authors = ["Linus Michelsson <linus.michelsson@gmail.com>"]
description = "A library for interacting with SchoolSofts mobile app API"
readme = "README.md"
repository = "https://github.com/Square-face/schoolsoft"
license = "GPL-3.0-only"
keywords = ["schoolsoft", "api", "school", "schoolsoft-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0.58"
tokio = "1.35.1"
uuid = { version = "1.8.0", features = ["serde"] }

[dev-dependencies]
mockito = "1.2.0"
pretty_assertions = "1.4.0"
